--- a/src/main/java/com/mycompany/ui/QuanLyTaiKhoanJDialog.form
+++ b/src/main/java/com/mycompany/ui/QuanLyTaiKhoanJDialog.form
@@ -42,7 +42,7 @@
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jTabbedPane2" min="-2" pref="438" max="-2" attributes="0"/>
-              <EmptySpace pref="19" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -50,6 +50,12 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Segoe UI" size="24" style="1"/>
+        </Property>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="fe" green="bc" red="39" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Qua&#x309;n ly&#x301; ta&#x300;i khoa&#x309;n"/>
       </Properties>
     </Component>
