--- a/src/main/java/com/mycompany/ui/ChaoJDialog.form
+++ b/src/main/java/com/mycompany/ui/ChaoJDialog.form
@@ -19,7 +19,8 @@
     </Container>
   </NonVisualComponents>
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="2"/>
+    <Property name="defaultCloseOperation" type="int" value="0"/>
+    <Property name="undecorated" type="boolean" value="true"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
