--- a/src/main/java/com/mycompany/ui/LoginJDialog.form
+++ b/src/main/java/com/mycompany/ui/LoginJDialog.form
@@ -4,6 +4,9 @@
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="0"/>
     <Property name="undecorated" type="boolean" value="true"/>
+    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+      <Dimension value="[919, 515]"/>
+    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -131,7 +134,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="99" green="99" red="0" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Ma&#x303; ta&#x300;i khoa&#x309;n"/>
+            <Property name="text" type="java.lang.String" value="T&#xea;n ta&#x300;i khoa&#x309;n"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtUserName">
